# r3dapple.github.io

./: .gitignore  CNAME  LICENSE  README.md  TESTKEYS_private.txt  TESTKEYS_public.txt  about.html  contact.html  gmon.out  index.html  riemann.html  style.css
about/: index.html
cellularautomata/: cellauto3d.html  cellauto3d.js  cellauto3ddrawElements.js  cellularautomata.html  cellularautomata.js  cellularautomatamulti.html  cellularautomatamulti.js  index.html  r3webgl.html  vertex_data.js
cnngooglequickdraw/: index.html  jupyter_export.html
combinatorics/: index.html
contact/: index.html
encryption/: a.out  client_rsa.cpp  compile.sh  compile_rsa.sh  cryptolibrary.asta  index.html  mhcl_uml.svg.bak  testfile.txt.enc
encryption/cryptocode/: aes.cpp  client.cpp  galois_field.h  helper.cpp  helper.hh  rijndael_key_schedule.cpp
encryption/mhcl/: CMakeLists.txt
encryption/mhcl/aes/: galois_field.cpp  rijndael_key_schedule.h
encryption/mhcl/biginteger/: biginteger.cpp  biginteger.h
encryption/mhcl/rsa/: helper.cpp  helper.h  rsa.cpp  rsa.h
encryption/mhcl/src/: CMakeLists.txt  main.cpp
encryption/mhcl/src/aes/: aes.cpp  aes.h  aes.hpp  galois_field.cpp  galoisfield.cpp  galoisfield.hpp  rijndael_key_schedule.cpp  rijndaelkeyschedule.cpp  rijndaelkeyschedule.hpp  termicolor.cpp  termicolor.h
encryption/mhcl/src/biginteger/: biginteger.cpp  biginteger.h  biginteger.hpp  dividebyzeroexception.cpp  dividebyzeroexception.hpp
encryption/mhcl/src/rsa/: helper.cpp  helper.h  helper.hpp  rsa.cpp  rsa.h  rsa.hpp
encryption/mhcl/test/: CMakeLists.txt  aes_biginteger.cpp  test_biginteger.cpp  test_biginteger_add.cpp  test_biginteger_bitand.cpp  test_biginteger_constructor.cpp  test_biginteger_divide.cpp  test_biginteger_multiply.cpp  test_biginteger_subtract.cpp
heatexpansion/: index.html
lib/: r3webgl.js
licenses/: index.html
multilayerperceptron/: ann.html  function.js  function.wasm  index.html  multilayerperceptron.html  multilayerperceptron.js
riemann/: index.html  riemann.html  riemann.js
shaderart/: bouncingBalls.js  index.html  shapesAndColors.js  simplest3D.js
